--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -1,10 +1,26 @@
 <div ng-controller="MainCtrl">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Dashboard</h1>
+            <h1 class="page-header">Tableau de bord</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
+
+    <!--alertes-->
+    <div class="row">
+
+        <div class="alert alert-danger alert-dismissable" ng-hide="batterieVide.data">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true" >&times;</button>
+                La batterie est presque vide ! (Bonne chance pour rentrer)
+        </div>
+
+        <div class="alert alert-warning alert-dismissable" ng-hide="arretNonVerrouille.data">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                Attention ! Ton vélo est à l'arrêt mais n'est pas vérrouillé.
+        </div>
+
+    </div>
+
     <!-- /.row -->
     <div class="row">
         
@@ -51,18 +67,14 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>#</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
+                                <th>Activité</th>
+                                <th>Lieu</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
+                                <td>Maison</td>
+                                <td>Rennes</td>
                             </tr>
                             
                         </tbody>
@@ -83,18 +95,16 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>#</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
+                                <th>Date</th>
+                                <th>Départ</th>
+                                <th>Arrivé</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
+                                <td>28.04.15</td>
+                                <td>11 square de la grande charbonniere Rennes</td>
+                                <td>263 avenue du général Leclerc</td>
                             </tr>
                             
                         </tbody>
@@ -115,18 +125,14 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>#</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
+                                <th>Départ</th>
+                                <th>Arrivé</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
+                                <td>263 avenue du général Leclerc Rennes</td>
+                                <td>11 square de la grande charbonniere Rennes</td>
                             </tr>
                             
                         </tbody>
@@ -137,6 +143,13 @@
                 <!-- /.panel-body -->
             </div>
         </div> <!-- /.col-lg-4 -->
-    </div> <!-- /.row des tableaux -->
+    </div><!-- /.row des tableaux -->
 
+    <div>
+        <map center="current-location" zoom="6">
+            <info-window position="current-location" visible="true">
+                <span>Position actuelle</span>
+            </info-window>
+        </map>
+    </div>
 </div>
