--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -1,7 +1,7 @@
 <div ng-controller="MainCtrl">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tableau de bord</h1>
+            <h1 > </h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -146,7 +146,8 @@
     </div><!-- /.row des tableaux -->
 
     <div>
-        <map center="current-location" zoom="6">
+
+       <<map center="current-location" zoom="6">
             <info-window position="current-location" visible="true">
                 <span>Position actuelle</span>
             </info-window>
