modification sur la carte, on affiche desormais la position du vélo

--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -148,8 +148,8 @@
     <div>
 
        <<map center="current-location" zoom="6">
-            <info-window position="current-location" visible="true">
-                <span>Position actuelle</span>
+            <info-window position="48.1140037,-1.6843669" visible="true">
+                <span>Position du vélo</span>
             </info-window>
         </map>
     </div>
