--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -24,7 +24,7 @@
     <!-- /.row -->
     <div class="row">
         
-        <stats number="{{vitesseMax.data}} km/h" comments="Reccord de vitesse" colour="primary" type="tachometer"></stats>
+        <stats number="{{names.vitesseMax}} km/h" comments="Reccord de vitesse" colour="primary" type="tachometer"></stats>
         <stats number="{{dTotale.data}} km" comments="Distance totale" colour="green" type="road"></stats>
         <stats number="{{dMaxEntre2Charges.data}} km" comments="max. entre deux charges" colour="yellow" type="plug"></stats>
         <stats number="{{tpsSinceLastUse.data}}" comments=" depuis que tu n'as pas pédalé" colour="red" type="clock-o"></stats>
