- Tansformation du serveur http de requetage de la base de donnée en serveur WebSocket - Modification du controller de l'application - Ajout du lien entre la base de donnée et l'application via le Serveur WebSocket

--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -1,3 +1,15 @@
+<script>
+    var data = {vitesseMax:"", distanceTotale:"", distanceMaxEntreDeuxCharges:"",dernierUtilisation:"",etatCharge:""}; 
+    var socket = new WebSocket ("ws://localhost:8080");
+
+    socket.onmessage = function(e)
+    {
+        console.log (e);
+    }
+</script>
+ 
+<body id="main"></boby>
+
 <div ng-controller="MainCtrl">
     <div class="row">
         <div class="col-lg-12">
