--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -1,15 +1,3 @@
-<script>
-    var data = {vitesseMax:"", distanceTotale:"", distanceMaxEntreDeuxCharges:"",dernierUtilisation:"",etatCharge:""}; 
-    var socket = new WebSocket ("ws://localhost:8080");
-
-    socket.onmessage = function(e)
-    {
-        console.log (e);
-    }
-</script>
- 
-<body id="main"></boby>
-
 <div ng-controller="MainCtrl">
     <div class="row">
         <div class="col-lg-12">
@@ -36,10 +24,10 @@
     <!-- /.row -->
     <div class="row">
         
-        <stats number="{{vitesseMax.data}} km/h" comments="Reccord de vitesse" colour="primary" type="tachometer"></stats>
-        <stats number="{{dTotale.data}} km" comments="Distance totale" colour="green" type="road"></stats>
-        <stats number="{{dMaxEntre2Charges.data}} km" comments="max. entre deux charges" colour="yellow" type="plug"></stats>
-        <stats number="{{tpsSinceLastUse.data}}" comments=" depuis que tu n'as pas pédalé" colour="red" type="clock-o"></stats>
+        <stats number="{{data.vitesseMax}} km/h" comments="Reccord de vitesse" colour="primary" type="tachometer"></stats>
+        <stats number="{{data.distanceTotale}} km" comments="Distance totale" colour="green" type="road"></stats>
+        <stats number="{{data.distanceMaxEntreDeuxCharges}} km" comments="max. entre deux charges" colour="yellow" type="plug"></stats>
+        <stats number="{{data.dernierUtilisation}}" comments=" depuis que tu n'as pas pédalé" colour="red" type="clock-o"></stats>
 
     </div>
     
